--- a/build.gradle
+++ b/build.gradle
@@ -20,13 +20,20 @@ repositories {
 
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
-	implementation 'org.springframework.kafka:spring-kafka'
+	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	compileOnly 'org.projectlombok:lombok'
+	runtimeOnly 'com.h2database:h2'
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation('org.springframework.boot:spring-boot-starter-test') {
 		exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
 	}
 	testImplementation 'org.springframework.kafka:spring-kafka-test'
+
+	implementation 'org.springframework.kafka:spring-kafka'
+//	implementation 'org.springframework.kafka:kafka-streams:2.3.1'
+	// https://mvnrepository.com/artifact/org.apache.kafka/kafka-streams
+	compile group: 'org.apache.kafka', name: 'kafka-streams', version: '2.3.1'
+
 }
 
 sourceSets{
