--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,12 +3,12 @@ spring:
     active: local
 ---
 spring:
-  profiles: local
+  profiles: local # local 만 수정
   kafka:
     template:
       default-topic: library-events
     producer:
-      bootstrap-servers: localhost:9092,localhost:9093,localhost:9094
+      bootstrap-servers: localhost:9092 #,localhost:9093,localhost:9094
       key-serializer: org.apache.kafka.common.serialization.IntegerSerializer
       value-serializer: org.apache.kafka.common.serialization.StringSerializer
       properties:
@@ -17,7 +17,29 @@ spring:
         retry.backoff.ms: 1000
     admin:
       properties:
-        bootstrap.servers: localhost:9092,localhost:9093,localhost:9094
+        bootstrap.servers: localhost:9092 #,localhost:9093,localhost:9094
+
+    consumer:
+      bootstrap-servers: localhost:9092 #,localhost:9093,localhost:9094
+      key-deserializer: org.apache.kafka.common.serialization.IntegerDeserializer
+      value-deserializer: org.apache.kafka.common.serialization.StringDeserializer
+      group-id: library-events-listener-group
+
+    streams:
+      application-id: library-events-stream
+      bootstrap-servers: localhost:9092
+
+
+  datasource:
+    url: jdbc:h2:mem:testdb
+    driver-class-name: org.h2.Driver
+  jpa:
+    database: h2
+    database-platform: org.hibernate.dialect.H2Dialect
+    generate-ddl: true
+  h2:
+    console:
+      enabled: true
 ---
 spring:
   profiles: dev
