--- a/build.gradle
+++ b/build.gradle
@@ -34,6 +34,8 @@ dependencies {
 	// https://mvnrepository.com/artifact/org.apache.kafka/kafka-streams
 	compile group: 'org.apache.kafka', name: 'kafka-streams', version: '2.3.1'
 
+	compile('org.springframework.boot:spring-boot-starter-mustache')
+
 }
 
 sourceSets{
