--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,62 +1,6 @@
 spring:
   profiles:
-    active: local
-    include: oauth
+#    active: local
+    include: oauth,kafka # 설정 파일 보안
   session:
     store-type: jdbc
----
-spring:
-  profiles: local # local 만 수정
-  kafka:
-    template:
-      default-topic: library-events
-    producer:
-      bootstrap-servers: localhost:9092 #,localhost:9093,localhost:9094
-      key-serializer: org.apache.kafka.common.serialization.StringSerializer
-      value-serializer: org.apache.kafka.common.serialization.StringSerializer
-      properties:
-        acks: all
-        retries: 10
-        retry.backoff.ms: 1000
-    admin:
-      properties:
-        bootstrap.servers: localhost:9092 #,localhost:9093,localhost:9094
-
-    consumer:
-      bootstrap-servers: localhost:9092 #,localhost:9093,localhost:9094
-      key-deserializer: org.apache.kafka.common.serialization.StringDeserializer
-      value-deserializer: org.apache.kafka.common.serialization.StringDeserializer
-      group-id: library-events-listener-group
-
-    streams:
-      application-id: library-events-stream
-      bootstrap-servers: localhost:9092
-
-
-  datasource:
-    url: jdbc:h2:mem:testdb
-    driver-class-name: org.h2.Driver
-  jpa:
-    database: h2
-    database-platform: org.hibernate.dialect.H2Dialect
-    generate-ddl: true
-  h2:
-    console:
-      enabled: true
----
-spring:
-  profiles: dev
-  kafka:
-    producer:
-      bootstrap-servers: dev:9092
-      key-serializer: org.apache.kafka.common.serialization.IntegerSerializer
-      value-serializer: org.apache.kafka.common.serialization.StringSerializer
-
----
-spring:
-  profiles: prod
-  kafka:
-    producer:
-      bootstrap-servers: prod:9092
-      key-serializer: org.apache.kafka.common.serialization.IntegerSerializer
-      value-serializer: org.apache.kafka.common.serialization.StringSerializer
