--- a/build.gradle
+++ b/build.gradle
@@ -21,9 +21,16 @@ repositories {
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+	implementation 'org.springframework.boot:spring-boot-starter-data-elasticsearch'
+// https://mvnrepository.com/artifact/org.elasticsearch/elasticsearch
+	compile group: 'org.elasticsearch', name: 'elasticsearch', version: '6.8.5'
+
+	compile group: 'com.google.guava', name: 'guava', version: '25.1-jre'
 	compileOnly 'org.projectlombok:lombok'
-	runtimeOnly 'com.h2database:h2'
 	annotationProcessor 'org.projectlombok:lombok'
+
+	runtimeOnly 'com.h2database:h2'
+
 	testImplementation('org.springframework.boot:spring-boot-starter-test') {
 		exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
 	}
